chapter03-deploy-scale-services/3.1-deploy-services/k8s/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: deploy-service
  labels:
    name: ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: register-api
            port:
              number: 8080
